--- a/package.json
+++ b/package.json
@@ -22,23 +22,21 @@
     "software-developer"
   ],
   "dependencies": {
-    "@heroicons/react": "^2.2.0",
-    "framer-motion": "^11.11.17",
-    "next": "^15.5.5",
-    "nodemailer": "^6.9.8",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "@heroicons/react": "^2.0.18",
+    "framer-motion": "^10.16.4",
+    "next": "14.2.5",
+    "nodemailer": "^6.9.7",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@types/node": "^24.7.2",
+    "@types/node": "^20.14.9",
     "@types/nodemailer": "^6.4.14",
-    "@types/react": "^19.2.2",
-    "@types/react-dom": "^19.2.2",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^9.37.0",
-    "eslint-config-next": "^15.5.5",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.9.3"
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5.5.3"
   }
 }
